<resources>
    <string name="app_name">Calculator</string>

    <string name="delete_bt">C</string>
    <string name="open_bracket_bt">(</string>
    <string name="close_bracket_bt">)</string>
    <string name="divide_bt">/</string>
    <string name="seven_bt">7</string>
    <string name="eight_bt">8</string>
    <string name="nine_bt">9</string>
    <string name="multiply_bt">*</string>
    <string name="four_bt">4</string>
    <string name="five_bt">5</string>
    <string name="six_bt">6</string>
    <string name="add_bt">+</string>
    <string name="one_bt">1</string>
    <string name="two_bt">2</string>
    <string name="three_bt">3</string>
    <string name="subtract_bt">-</string>
    <string name="delete_all_bt">AC</string>
    <string name="zero_bt">0</string>
    <string name="dot_bt">.</string>
    <string name="equal_bt">=</string>
</resources>